LOG:

         - 0.3.17 fixed bug # 2998604, # 2983464
                  maintenance mode ("-m") for lixad is now available
                  dump specific records ("--dump=[ufs]") instead of all the
                  content

20100507 - 0.3.16 fixed bugs # 2944441, # 2978075
                  partially implemented rfnf 2963164

20100501 - 0.3.15 implemented test case infrastructure
                  implemented monkey test resource manager
                  fixed bug # 2943356 (heuristically completed transactions
                  support)

20100421 - 0.3.14 implemented rfnf # 2980750
                  fixed a bug related to dynamic registration: it created
                  in-doubt transaction in normal situations (!)

20100420 - 0.3.13 fixed bug # 2913849
                  implemented and partially tested dynamic registration for
                  IBM DB2; implemented but not tested dynamic registration for
                  Oracle

20100411 - 0.3.12 fixed bugs # 2984162, # 2984162

20100409 - 0.3.11 fixed bug # 2907563

20100303 - 0.3.10 implemented feature # 2961552 (status file dump)

20100208 - 0.3.9 fixed bugs # 2907562, # 2907545 

20100131 - 0.3.8 bug # 2907548 fix

20100129 - 0.3.7 removed "Oracle's cdemo81 sample and its cdemo81_lixa derivated
                 sample: no more intellectual property possible issues..."

20100128 - 0.3.6 bug # 2907542 fix

20100101 - 0.3.5 bug # 2907537 fix

20091212 - 0.3.4 bug # 2912287 fix

20091210 - 0.3.3 bug # 2907554 fix
                 bug # 2907552 fix

20091208 - 0.3.2 bug # 2909089 fix

20091202 - 0.3.0 release; all "tx_" functions are available, many are dummies

20090330 - 0.1.0 first very early release, the daemon compiles and run, but is
           useless